feat: Enhance SEO and performance with updated meta tags and structured data

--- a/index.html
+++ b/index.html
@@ -1,44 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CT5CB3MDLR"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-CT5CB3MDLR");
+    </script>
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>
+      Router-Kit - Lightweight React Routing Library | Fast & Simple Navigation
+      for React Apps
+    </title>
+    <meta
+      name="title"
+      content="Router-Kit - Lightweight React Routing Library | Fast & Simple Navigation for React Apps"
+    />
     <meta
       name="description"
-      content="Router-Kit - A lightweight, minimal, and powerful client-side routing library for React applications"
+      content="Router-Kit is a lightweight, minimal, and powerful client-side routing library for React applications. Easy to use, TypeScript support, and blazing fast performance. Perfect alternative to React Router."
     />
     <meta
       name="keywords"
-      content="React, Router, Routing, TypeScript, JavaScript, React Router, Navigation, SPA"
+      content="React Router, Router-Kit, React Routing, TypeScript Router, JavaScript Router, React Navigation, SPA Router, Single Page Application, React Router Alternative, Lightweight Router, Client-side Routing, React Hooks Router"
     />
     <meta name="author" content="Mohammed Ben Cheikh" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta name="googlebot" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://routerkit.com/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="msapplication-TileColor" content="#3b82f6" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://routerkit.com/" />
+    <meta property="og:site_name" content="Router-Kit" />
     <meta
       property="og:title"
-      content="Router-Kit - Lightweight React Routing Library"
+      content="Router-Kit - Lightweight React Routing Library | Fast & Simple Navigation"
     />
     <meta
       property="og:description"
-      content="A lightweight, minimal, and powerful client-side routing library for React applications"
+      content="Router-Kit is a lightweight, minimal, and powerful client-side routing library for React applications. Easy to use, TypeScript support, and blazing fast performance."
     />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="https://routerkit.com/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Router-Kit Logo" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://routerkit.com/" />
     <meta
       name="twitter:title"
       content="Router-Kit - Lightweight React Routing Library"
     />
     <meta
       name="twitter:description"
-      content="A lightweight, minimal, and powerful client-side routing library for React applications"
+      content="A lightweight, minimal, and powerful client-side routing library for React applications. Easy to use with TypeScript support."
     />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="https://routerkit.com/logo.png" />
+    <meta name="twitter:creator" content="@MohammedBenCheikh" />
 
-    <title>Router-Kit - Lightweight React Routing Library</title>
+    <!-- Structured Data / Schema.org -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Router-Kit",
+        "applicationCategory": "DeveloperApplication",
+        "operatingSystem": "Any",
+        "description": "A lightweight, minimal, and powerful client-side routing library for React applications",
+        "url": "https://routerkit.com/",
+        "author": {
+          "@type": "Person",
+          "name": "Mohammed Ben Cheikh"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "5",
+          "ratingCount": "1"
+        },
+        "softwareVersion": "1.3.1",
+        "programmingLanguage": ["JavaScript", "TypeScript"],
+        "keywords": "React Router, TypeScript, JavaScript, React Navigation, SPA, Routing Library"
+      }
+    </script>
+
+    <!-- Performance Hints -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+
+    <!-- Security -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="DENY" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
   </head>
   <body>
     <div id="root"></div>
