feat: Update keywords in index.html and package.json for improved SEO and discoverability

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
     <meta
       name="keywords"
-      content="React Router, Router-Kit, React Routing, TypeScript Router, JavaScript Router, React Navigation, SPA Router, Single Page Application, React Router Alternative, Lightweight Router, Client-side Routing, React Hooks Router"
+      content="React Router, Router-Kit, router-kit, router kit, routerkit, npm, react, React Routing, TypeScript Router, JavaScript Router, React Navigation, SPA Router, Single Page Application, React Router Alternative, Lightweight Router, Client-side Routing, React Hooks Router, dynamic routing, nested routes, route parameters, query params, hash routing, browser router, react components, minimal router, route matching, history api, modern react router, fast routing library, react spa, web router, frontend routing, declarative routing, react 18, react 19, vite, typescript support"
     />
     <meta name="author" content="Mohammed Ben Cheikh" />
     <meta
@@ -112,7 +112,7 @@
         },
         "softwareVersion": "1.3.1",
         "programmingLanguage": ["JavaScript", "TypeScript"],
-        "keywords": "React Router, TypeScript, JavaScript, React Navigation, SPA, Routing Library"
+        "keywords": "React Router, Router-Kit, router-kit, router kit, npm, react, TypeScript, JavaScript, React Navigation, SPA, Routing Library, single-page-application, client-side routing, dynamic routing, nested routes, route parameters, browser router, lightweight router, minimal router, react components, hash routing, history api, route matching, modern routing, fast router, react 18, react 19, vite"
       }
     </script>
 
