--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <!-- Google tag (gtag.js) -->
@@ -21,20 +21,20 @@
 
     <!-- Primary Meta Tags -->
     <title>
-      Router-Kit - Lightweight React Routing Library | Fast & Simple Navigation
-      for React Apps
+      Router-Kit v2.0 - Professional React Routing Made Simple | SSR, Route
+      Guards, Data Loaders
     </title>
     <meta
       name="title"
-      content="Router-Kit - Lightweight React Routing Library | Fast & Simple Navigation for React Apps"
+      content="Router-Kit v2.0 - Professional React Routing Made Simple | SSR, Route Guards, Data Loaders"
     />
     <meta
       name="description"
-      content="Router-Kit is a lightweight, minimal, and powerful client-side routing library for React applications. Easy to use, TypeScript support, and blazing fast performance. Perfect alternative to React Router."
+      content="Router-Kit is a lightweight (~5kb), type-safe routing library for React with React Router-like API. Features SSR support, route guards, data loaders, navigation blocking, lazy loading, and more."
     />
     <meta
       name="keywords"
-      content="React Router, Router-Kit, router-kit, router kit, routerkit, npm, react, React Routing, TypeScript Router, JavaScript Router, React Navigation, SPA Router, Single Page Application, React Router Alternative, Lightweight Router, Client-side Routing, React Hooks Router, dynamic routing, nested routes, route parameters, query params, hash routing, browser router, react components, minimal router, route matching, history api, modern react router, fast routing library, react spa, web router, frontend routing, declarative routing, react 18, react 19, vite, typescript support"
+      content="React Router, Router-Kit, router-kit, router kit, routerkit, npm, react, React Routing, TypeScript Router, JavaScript Router, React Navigation, SPA Router, Single Page Application, React Router Alternative, Lightweight Router, Client-side Routing, SSR, Server Side Rendering, Route Guards, Data Loaders, Navigation Blocking, useNavigate, useBlocker, useLoaderData, React Hooks Router, dynamic routing, nested routes, route parameters, Outlet, declarative routing, react 18, react 19, vite, typescript support"
     />
     <meta name="author" content="Mohammed Ben Cheikh" />
     <meta
@@ -51,8 +51,8 @@
     <link rel="apple-touch-icon" href="/logo.png" />
 
     <!-- Theme Color -->
-    <meta name="theme-color" content="#3b82f6" />
-    <meta name="msapplication-TileColor" content="#3b82f6" />
+    <meta name="theme-color" content="#6366F1" />
+    <meta name="msapplication-TileColor" content="#6366F1" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -60,11 +60,11 @@
     <meta property="og:site_name" content="Router-Kit" />
     <meta
       property="og:title"
-      content="Router-Kit - Lightweight React Routing Library | Fast & Simple Navigation"
+      content="Router-Kit v2.0 - Professional React Routing Made Simple"
     />
     <meta
       property="og:description"
-      content="Router-Kit is a lightweight, minimal, and powerful client-side routing library for React applications. Easy to use, TypeScript support, and blazing fast performance."
+      content="A lightweight, type-safe routing library for React with SSR support, route guards, data loaders, navigation blocking, and more. ~5kb gzipped."
     />
     <meta property="og:image" content="https://routerkit.com/logo.png" />
     <meta property="og:image:width" content="1200" />
@@ -77,11 +77,11 @@
     <meta name="twitter:url" content="https://routerkit.com/" />
     <meta
       name="twitter:title"
-      content="Router-Kit - Lightweight React Routing Library"
+      content="Router-Kit v2.0 - Professional React Routing Made Simple"
     />
     <meta
       name="twitter:description"
-      content="A lightweight, minimal, and powerful client-side routing library for React applications. Easy to use with TypeScript support."
+      content="A lightweight, type-safe routing library for React with SSR, route guards, data loaders, and navigation blocking. ~5kb gzipped."
     />
     <meta name="twitter:image" content="https://routerkit.com/logo.png" />
     <meta name="twitter:creator" content="@MohammedBenCheikh" />
@@ -94,7 +94,7 @@
         "name": "Router-Kit",
         "applicationCategory": "DeveloperApplication",
         "operatingSystem": "Any",
-        "description": "A lightweight, minimal, and powerful client-side routing library for React applications",
+        "description": "A lightweight, type-safe routing library for React with React Router-like API. Features SSR support, route guards, data loaders, navigation blocking, lazy loading, and more.",
         "url": "https://routerkit.com/",
         "author": {
           "@type": "Person",
@@ -110,21 +110,15 @@
           "ratingValue": "5",
           "ratingCount": "1"
         },
-        "softwareVersion": "1.3.1",
+        "softwareVersion": "2.0.1",
         "programmingLanguage": ["JavaScript", "TypeScript"],
-        "keywords": "React Router, Router-Kit, router-kit, router kit, npm, react, TypeScript, JavaScript, React Navigation, SPA, Routing Library, single-page-application, client-side routing, dynamic routing, nested routes, route parameters, browser router, lightweight router, minimal router, react components, hash routing, history api, route matching, modern routing, fast router, react 18, react 19, vite"
+        "keywords": "React Router, Router-Kit, router-kit, SSR, Server Side Rendering, Route Guards, Data Loaders, Navigation Blocking, useNavigate, useBlocker, useLoaderData, TypeScript, JavaScript, React Navigation, SPA, Routing Library, nested routes, Outlet, declarative routing, react 18, react 19, vite"
       }
     </script>
 
     <!-- Performance Hints -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
-
-    <!-- Security -->
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="X-Frame-Options" content="DENY" />
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
-    <meta name="referrer" content="no-referrer-when-downgrade" />
   </head>
   <body>
     <div id="root"></div>
